2007-06-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Forgot to remove the deleted Makefile.in from configure.ac.

2007-06-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Redmond/Makefile.am:
	* themes/Redmond/gtk/Makefile.am:
	* themes/Redmond/gtk/gtkrc:
	Remove GTK+ 1.x theme.

2007-06-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Small fix in the 2.11.1 news.

2007-06-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.11.1 release.

2007-06-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c:
	(clearlooks_set_toolbar_parameters):
	Added needed NULL pointer check.

2007-06-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tooltip):
	Different shade

2007-06-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tooltip):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_flat_box):
	Changed shading on tooltip's border

	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_flat_box):
	1 px error before? Fixed...?

2007-06-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tooltip), (clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_flat_box):
	* engines/clearlooks/src/clearlooks_types.h:
	Implement custom tooltip drawing. Fixes bug #413055.

2007-06-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_handle), (clearlooks_style_draw_box):
	* engines/clearlooks/src/support.c:
	(clearlooks_set_toolbar_parameters):
	* engines/clearlooks/src/support.h:
	Try a different heuristic to figure out if the toolbar is at the top
	of the window.

2007-05-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c: