@@ -1,3 +1,10 @@
+2007-06-13  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_get_frame_gap_clip), (clearlooks_draw_frame):
+	Mark the frame argument of clearlooks_get_frame_gap_clip const, and
+	remove a cast. This should fix a warning.
+
 2007-06-08  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* configure.ac:
